# getdata_ur_for_draw

./: .gitignore  README.md  need.md  pyproject.toml  requirements.txt
configs/: default.json  mock.json  pepper.json  potato.json
docs/: CONFIG.md  HANDOFF.md
src/grasp_dataset_collector/: __init__.py  camera.py  cli.py  config.py  dataset.py  pose.py
