[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grasp-dataset-collector"
version = "0.1.0"
description = "Fixed-view grasp success dataset collection tool with RealSense and RTDE."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pyrealsense2>=2.54",
  "ur-rtde>=1.5",
]

[project.scripts]
grasp-dataset-collector = "grasp_dataset_collector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
